Rename and refactor all apps to PascalCase conventions
- Rename keep-presence -> nudge (dir, file, class, alias)
- Rename type-clipboard -> typeit (dir, file, class, alias)
- Rename serve.java -> Serve.java, tfup.java -> Tfup.java
- Fix all class names to PascalCase (Nudge, Typeit, Serve, Tfup)
- Add per-app IntelliJ source roots in jbang-catalog.iml
- Remove package declarations (each app dir is its own source root)
- Add @SuppressWarnings("unused") on all picocli command classes
- Remove final from all @Option/@Parameters fields
- Fix Nudge: expression lambda, Math.clamp, dead assignment, duplicate clampToScreen call
- Fix Typeit: remove redundant keyCode sentinel initializer and always-true guard
- Fix Tfup: Path.of over Paths.get, proper imports, inline stream anyMatch
- Expand wildcard java.awt.* imports to explicit in Nudge and Typeit
- Update jbang-catalog.json aliases and script-refs
- Update README.md sections for nudge and typeit
- Update AGENTS.md with picocli field rules, Math.clamp, expression lambda guidance
- Format all files with jbang-fmt --style=google